# hive

./: .gitignore  CMakeLists.txt  LICENSE  README.md  board.cpp  board.h  game.cpp  game.h  main.cpp  menu.cpp  menu.h  move.cpp  move.h  pieceSet.cpp  pieceSet.h  uml.plantuml
Piece/: piece.cpp  piece.h
Player/: ai.cpp  human.cpp  player.cpp  player.h
Player/AiStrategy/: aiStrategy.cpp  aiStrategy.h
